React - Fixes an overflow on the Select component

--- a/React/src/components/loan_inputs/LoanInputs.css
+++ b/React/src/components/loan_inputs/LoanInputs.css
@@ -26,7 +26,6 @@
 
 .lfilters-select-container {
     flex: 1 1;
-    min-width: fit-content;
     max-width: 20rem;
 }
 
