--- a/React/src/components/select/Select.css
+++ b/React/src/components/select/Select.css
@@ -44,8 +44,9 @@
     display: flex;
     flex-flow: column nowrap;
     gap: 0.5em;
-    flex: 1;
+    flex: 1 1;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .select-name {
@@ -59,6 +60,9 @@
 
 .select-selected-option {
     color: #1f1b16;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .select-container button {
